argo-vpol/application-prevent-default-project/.kyverno-test-wrong-value/exception.yaml
apiVersion: policies.kyverno.io/v1
kind: PolicyException
metadata:
  name: application-wrong-project-value
  namespace: policy-exceptions
spec:
  policyRefs:
  - name: application-prevent-default-project
    kind: ValidatingPolicy
  matchConditions:
  - name: exact-application
    expression: object.metadata.namespace == 'default' && object.metadata.name == 'exceptionapp'
  allowedValues:
  - another-project
