argo-vpol/application-prevent-default-project/.kyverno-test-wrong-value/kyverno-test.yaml
apiVersion: cli.kyverno.io/v1alpha1
kind: Test
metadata:
  name: application-default-project-wrong-value
policies:
- ../application-prevent-default-project.yaml
resources:
- ../.chainsaw-test/exception-application.yaml
exceptions:
- exception.yaml
results:
- policy: application-prevent-default-project
  kind: Application
  resources: [exceptionapp]
  result: fail
  isValidatingPolicy: true
